-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
-
c321349f2 (dev), a6e50dbb3 (6.5), 5187f8f85 (6.4)
To reproduce:
- run attached example
- open console in browser
- click Open button
- wait until socket is connected
- click Close button
Uncaught RuntimeError: operation does not support unaligned accesses at void doActivate<false>(QObject*, int, void**) (app.wasm:0xcfb8e) at QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (app.wasm:0xd5f6c) at QWebSocket::stateChanged(QAbstractSocket::SocketState) (app.wasm:0x54e22d) at QWebSocketPrivate::setSocketState(QAbstractSocket::SocketState) (app.wasm:0x555509) at QWebSocketPrivate::setSocketClosed(EmscriptenWebSocketCloseEvent const*) (app.wasm:0x5586f3) at q_onWebSocketCloseCallback(int, EmscriptenWebSocketCloseEvent const*, void*) (app.wasm:0x5584c6) at socket.onclose (eval at completeLoadEmscriptenModule (qtloader.js:440:9), <anonymous>:12995:40) $void doActivate<false>(QObject*, int, void**) @ app.wasm:0xcfb8e $QMetaObject::activate(QObject*, QMetaObject const*, int, void**) @ app.wasm:0xd5f6c $QWebSocket::stateChanged(QAbstractSocket::SocketState) @ app.wasm:0x54e22d $QWebSocketPrivate::setSocketState(QAbstractSocket::SocketState) @ app.wasm:0x555509 $QWebSocketPrivate::setSocketClosed(EmscriptenWebSocketCloseEvent const*) @ app.wasm:0x5586f3 $q_onWebSocketCloseCallback(int, EmscriptenWebSocketCloseEvent const*, void*) @ app.wasm:0x5584c6 socket.onclose @ VM11:12995