wasm: fix heap-use-after-free when using deleteLater

QWebSocketPrivate was getting destroyed before the emscripten
close callback was getting called, which was then calling back into the
already destroyed object.
So we set the UnconnectedState before it gets destroyed.

Fixes: QTBUG-108996
Change-Id: I8ebbe5a55188a31209a95d2a71eea2faee3465ad
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit c321349f285913dd32718e74ad48c5972f6d1f87)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>